# montecarlo-option-pricer

./: .gitignore  README.md
assignment/: README.md  pyproject.toml
assignment/examples/: run_pricer.py
assignment/mc_pricer/: black_scholes.py  convergence.py  gbm.py  pricer.py  visualization.py
assignment/tests/: test_black_scholes.py  test_gbm.py  test_pricer.py
corrige/: pyproject.toml
corrige/examples/: run_pricer.py
corrige/mc_pricer/: __init__.py  black_scholes.py  gbm.py  visualization.py
mc_pricer/: convergence.py  pricer.py
solution/: README.md  pyproject.toml
solution/examples/: run_pricer.py
sujet/: README.md  pyproject.toml
sujet/examples/: run_pricer.py
sujet/mc_pricer/: black_scholes.py  convergence.py  gbm.py  pricer.py  visualization.py
sujet/tests/: test_black_scholes.py  test_gbm.py  test_pricer.py
tests/: test_pricer.py
