[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-pricer-assignment"
version = "0.1.0"
description = "Assignment: Monte Carlo pricer for European options (to be completed)"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[tool.setuptools]
packages = ["mc_pricer"]
