[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-pricer"
version = "0.1.0"
description = "Pricer Monte Carlo pour options europeennes sous le modele Black-Scholes"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[tool.setuptools]
packages = ["mc_pricer"]
